[tool.poetry]
name = "helpepper"
version = "0.1.0"
description = ""
authors = ["Vinícius Müller <vinigm.nho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
playsound = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
